# styks

./: .env.example  .gitignore  BUILD.md  CHANGELOG.md  Cargo.toml  Odra.toml  README.md  justfile
blocky-guest/: Makefile  README.md  config.toml  fn-call.json  fn-call.json.example  go.mod  main.go  output.go
blocky-guest/tmp/: x.wasm
docs/: CHANGELOG.md  KEY_RING_PAUSE_EVENTS.md  README.md  api-reference.md  measurement-anchored-model.md  nitro-attestation-format.md  quickstart.md  security-model.md
resources/: contracts.toml  contracts2.toml  contracts4.toml  contracts5.toml
resources/test/: 1_guest.wasm  1_out.json  2_out.json
styks-blocky-parser/: Cargo.toml
styks-blocky-parser/src/: blocky_claims.rs  blocky_output.rs  enclave_attestation.rs  lib.rs  nitro.rs  transitive_attestation.rs  verify.rs
styks-cli/: Cargo.toml  cli.rs
styks-cli/src/: cli.rs  lib.rs  price_update_procedure.rs
styks-cli/src/scenarios/: add_feed.rs  grant_me_all_roles.rs  list_feed.rs  mod.rs  set_config.rs  set_permissions.rs  update_price.rs
styks-contracts/: Cargo.toml
styks-contracts/src/: error.rs  lib.rs  price_feed.rs  price_feed_manager.rs  styks_blocky_supplier.rs  styks_price_feed.rs
styks-core/: Cargo.toml
styks-core/src/: heartbeat.rs  lib.rs  twap.rs
styks-website/: arch.html  arch.md  convert.py  pyproject.toml  style.css  template.html
styks-website/http-content/: index.html  styks_wasm_client.js  styks_wasm_client_bg.wasm  style.css
