[workspace]
members = [
    "styks-cli",
    "styks-contracts", "styks-core",
]
resolver = "2"

[workspace.dependencies]
odra = { version = "2.3.1" }
odra-test = { version = "2.3.1", features = [], default-features = false }
odra-build = { version = "2.3.1", features = [], default-features = false }
odra-cli = { version = "2.3.1", features = [], default-features = false }
odra-modules = { version = "2.3.1", features = [], default-features = false }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
