[workspace]
members = [
    "styks-blocky-parser",
    "styks-cli",
    "styks-contracts",
    "styks-core",
]
resolver = "2"

[workspace.dependencies]
odra = { git = "https://github.com/odradev/odra.git", branch = "feature/client-fixes-for-shorts"}
odra-modules = {  git = "https://github.com/odradev/odra.git", branch = "feature/client-fixes-for-shorts" }
odra-test = {  git = "https://github.com/odradev/odra.git", branch = "feature/client-fixes-for-shorts" }
odra-build = {  git = "https://github.com/odradev/odra.git", branch = "feature/client-fixes-for-shorts" }
odra-cli = {  git = "https://github.com/odradev/odra.git", branch = "feature/client-fixes-for-shorts" }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
