[workspace]
members = [
    "styks-blocky-parser",
    "styks-cli",
    "styks-contracts",
    "styks-core",
]
resolver = "2"

[workspace.dependencies]
odra = { git = "https://github.com/odradev/odra.git", branch = "release/2.4.1"}
odra-modules = {  git = "https://github.com/odradev/odra.git", branch = "release/2.4.1" }
odra-test = {  git = "https://github.com/odradev/odra.git", branch = "release/2.4.1" }
odra-build = {  git = "https://github.com/odradev/odra.git", branch = "release/2.4.1" }
odra-cli = {  git = "https://github.com/odradev/odra.git", branch = "release/2.4.1" }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
