[package]
name = "styks-blocky-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
k256 = { version = "0.13.4", features = ["ecdsa", "sha256", "alloc"], default-features = false }
sha3 = { version = "0.10.8", default-features = false }
ethabi = { version = "18.0.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde-json-wasm = { version = "1", default-features = false }

# Nitro attestation verification dependencies
coset = { version = "0.3", default-features = false }
ciborium = { version = "0.2", default-features = false }
p384 = { version = "0.13", default-features = false, features = ["ecdsa", "alloc"] }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# std-only dependencies
base64 = { version = "0.22.1", optional = true }

[features]
default = ["std"]
std = ["dep:base64", "hex/std"]
