[package]
name = "styks-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
styks-contracts = { path = "../styks-contracts" }
styks-core = { path = "../styks-core" }
styks-blocky-parser = { path = "../styks-blocky-parser" }
odra = { workspace = true }
odra-cli = { workspace = true }
ureq = "3.0.12"
serde_json = "1.0.140"
base64 = "0.22"
hex = "0.4"

[[bin]]
name = "styks-cli"
path = "src/cli.rs"

